Bug 81876 - FORMATTING: Fontwork-formatted text is duplicated
Summary: FORMATTING: Fontwork-formatted text is duplicated
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.6.3 release
Hardware: All macOS (All)
: highest major
Assignee: Pierre-Eric Pelloux-Prayer
URL:
Whiteboard: BSA target:4.5.0 target:4.3.7 target:...
Keywords: bibisectRequest, regression
: 84141 84602 86142 (view as bug list)
Depends on:
Blocks: macOS-UI-polish mab4.3
  Show dependency treegraph
 
Reported: 2014-07-29 13:49 UTC by Shunesburg69
Modified: 2016-06-18 21:27 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot text "Front Work" (53.91 KB, image/png)
2014-07-31 02:18 UTC, Shunesburg69
Details
File to test (14.68 KB, application/vnd.oasis.opendocument.text)
2014-07-31 02:20 UTC, Shunesburg69
Details
Screenshot of Bug (211.20 KB, image/png)
2014-08-17 14:54 UTC, be644bea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Shunesburg69 2014-07-29 13:49:14 UTC
Hello,
When you made a Frontwork with space in the text,
the displayed text is doubled.
Operating System: Mac OS X
Version: 4.3.0.3 rc
Last worked in: 4.2.5.2 release
Comment 1 tommy27 2014-07-31 02:11:47 UTC
please upload test file and/or screenshot
Comment 2 Shunesburg69 2014-07-31 02:18:44 UTC
Created attachment 103707 [details]
Screenshot text "Front Work"
Comment 3 Shunesburg69 2014-07-31 02:20:10 UTC
Created attachment 103708 [details]
File to test
Comment 4 tommy27 2014-07-31 02:42:33 UTC
not reproducible in Win7 using LibO 4.3.0.4

in the test file I see only "Font Work" not "Font WorkFont Work" like in your screenshot
Comment 5 Shunesburg69 2014-07-31 02:54:35 UTC
Me I'm on Mac, maybe it's just a bug for this OS.
Comment 6 ign_christian 2014-07-31 08:51:55 UTC
Not reproduced with 4.3.1.0.0+ 2014-07-30_10:54:10 in Ubuntu 12.04 x86

Have you tried resetting user profile : https://wiki.documentfoundation.org/UserProfile
Comment 7 Shunesburg69 2014-07-31 13:38:26 UTC
I tryed same thing. I think it's just on Mac.
I try on OS X 10.9.4 (Mavericks) and 10.10 beta (Yosemite), there is the problem for the both.
Comment 8 be644bea 2014-08-17 14:53:36 UTC
I have had the same problem on version 4.3.0.4 on Mac OSX 10.9.4
Comment 9 be644bea 2014-08-17 14:54:34 UTC
Created attachment 104762 [details]
Screenshot of Bug
Comment 10 Jacques Guilleron 2014-09-20 11:55:56 UTC
Hi,

Since be644bea confirm this behaviour, I set status to NEW.

Regards,

Jacques
Comment 11 Shunesburg69 2014-09-20 12:43:32 UTC
I have reset the configuration, the problem is always here.
And on the 4.3.1 version, the bug is present too.
Comment 12 Jacques Guilleron 2014-09-21 19:42:48 UTC
*** Bug 84141 has been marked as a duplicate of this bug. ***
Comment 13 Jacques Guilleron 2014-10-02 16:42:05 UTC
*** Bug 84602 has been marked as a duplicate of this bug. ***
Comment 14 ign_christian 2014-10-03 03:01:47 UTC
Set Version to 4.2.6.3 (not sure about x.x.x.1/2/3) per Bug 84141

Compared to comment 0, perhaps regression exist between 4.2.5.x - 4.2.6.x

To help dev, maybe someone could test with fresh profile from which version regression started. Source of all old versions: https://downloadarchive.documentfoundation.org/libreoffice/old/

*) Sorry..I don't have Mac to test
Comment 15 Jacques Guilleron 2014-10-03 10:50:23 UTC
Hi, 

Ssomebody among you can he verify 
[Bug 84602] EDITING : Fontwork text is doubled on Mac OS X
and confirm or infirm this is the same problem. 
The reporter says he has double text before adding a space.
Thank you all to answer.

Jacques
Comment 16 Shunesburg69 2014-10-22 22:20:56 UTC
By default the text is "Fontwork " with a space at the end.
The bug displays the text replicated when you enter an other text if there is a space caracter the text is replicated too but if you put a text without space it's displayed normally.
Comment 17 Shunesburg69 2014-11-28 01:19:54 UTC
I put the importance level to high because there is no answer in 4 months and it's troublesome for many files. It would be good to resolve the problem before the release of 4.4.
Comment 18 Julien Nabet 2014-11-30 16:00:07 UTC
https://bugs.freedesktop.org/show_bug.cgi?id=84480
Comment 19 Julien Nabet 2014-11-30 16:01:51 UTC
Sorry, I meant "MAB => highest (see https://bugs.freedesktop.org/show_bug.cgi?id=84480)"
Comment 20 Matthew Francis 2015-01-18 07:02:08 UTC
It is a regression (doesn't occur in 4.2.5.2) and could be bibisected, so setting:

Keywords -> regression
Whiteboard -> bibisectRequest
Comment 21 Shunesburg69 2015-01-18 17:41:00 UTC
The bug is always present in the current version (4.3.5) and in the future (4.4).
Comment 22 Pierre-Eric Pelloux-Prayer 2015-03-12 21:59:47 UTC
The regression was introduced with: 2ba05b4800d6cc322276a6911792363f8eb32051

I submitted a patch to fix the issue, see: https://gerrit.libreoffice.org/14850
Comment 23 Commit Notification 2015-03-18 20:23:50 UTC
Pierre-Eric Pelloux-Prayer committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=162f11cdb94b415ff9d58674e94fb01a745a69eb

vcl/text: fix duplicate text in fontwork tdf#81876

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 24 Shunesburg69 2015-03-18 20:40:23 UTC
Thank you, I look forward the new 4.5 version.
Comment 25 Commit Notification 2015-03-19 00:55:33 UTC
Pierre-Eric Pelloux-Prayer committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2cbec343b8aa2460604b7bed8fb9a8860e3f0717&h=libreoffice-4-3

vcl/text: fix duplicate text in fontwork tdf#81876

It will be available in 4.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 26 Commit Notification 2015-03-19 00:55:48 UTC
Pierre-Eric Pelloux-Prayer committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c9d2a2b7dfb33ea55477f3991915106ff8cae998&h=libreoffice-4-4

vcl/text: fix duplicate text in fontwork tdf#81876

It will be available in 4.4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 27 Robinson Tryon (qubit) 2015-12-17 08:29:00 UTC
Migrating Whiteboard tags to Keywords: (bibisectRequest)
[NinjaEdit]
Comment 28 Adolfo Jayme Barrientos 2016-06-18 21:27:25 UTC
*** Bug 86142 has been marked as a duplicate of this bug. ***