vcl/text: fix duplicate text in fontwork tdf#81876

Regression introduced by commit 2ba05b4800d6cc322276a6911792363f8eb32051
because space character will take the error code path. The error propagates
up to GetTextOutlines which then uses the fallback method.
In this case, we now reset any work done before, to avoid having duplicate
outlines.

Change-Id: Ie15524ac462d4b4bb3c482e49c4fe96a2f2d2c71
Reviewed-on: https://gerrit.libreoffice.org/14850
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 162f11cdb94b415ff9d58674e94fb01a745a69eb)
Reviewed-on: https://gerrit.libreoffice.org/14899
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>